website/assets/less/text.less
@import "colors";
@import "spacing";

.monospace {
  font-family: monospace;
}

body {
  font-size: 17px;
  font-family: 'Roboto', sans-serif;
}

a, p, ul, li, .text {
  line-height: 1.5;
  font-weight: 400;
  margin: 0;
  color: black;
}

.heading:extend(.text) {
  font-weight: 700;
  line-height: 1.3;
  color: rgba(0, 0, 0, 0.8);
}

.h1:extend(.heading), h1:extend(.heading) {
  font-size: 33px;
}

.h2:extend(.heading), h2:extend(.heading) {
  font-size: 27px;
}

.h3:extend(.heading), h3:extend(.heading) {
  font-size: 23px;
}

.h4:extend(.heading), h4:extend(.heading) {
  font-size: 20px;
  line-height: 1.5;
}

.h5:extend(.heading), h5:extend(.heading) {
  font-size: 17px;
  line-height: 1.5;
}

.h6:extend(.heading), h6:extend(.heading) {
  font-size: 14px;
  line-height: 1.5;
}

.large:extend(.text) {
  font-size: 20px;
}

.regular:extend(.text) {
  font-size: 17px;
}

small:extend(.text), .small:extend(.text) {
  font-size: 14px;
}

.tiny:extend(.text) {
  font-size: 12px;
}

a {
  color: @Blue;
  padding: 0;
  border: 0;

  text-decoration: underline;

  &:hover {
    cursor: pointer;
  }
}

.small-bold:extend(.small, .weight-500) {
}

.tiny-bold:extend(.tiny, .weight-500) {
}

.italic {
  font-style: italic;
}

.weight-300, .weight-light {
  font-weight: 300;
}

.weight-400, .weight-regular {
  font-weight: 400;
}

.weight-500, .bold, .weight-medium, b {
  font-weight: 500;
}

.weight-600 {
  font-weight: 600;
}

.weight-700, .weight-bold {
  font-weight: 700;
}

.weight-900, .weight-black {
  font-weight: 900;
}

.text-uppercase {
  text-transform: uppercase;
}

.text-capitalize {
  text-transform: capitalize;
}

.text-lowercase {
  text-transform: lowercase;
}

.text-underline {
  text-decoration: underline;
}

.text-decoration-none {
  text-decoration: none;

  * > {
    text-decoration: none;
  }
}

.hover-underline:hover {
  text-decoration: underline;
}

.text-nowrap {
  white-space: nowrap;
}

.text-center {
  text-align: center;
}

.lh-1 {
  line-height: 1;
}

.lh-1-3 {
  line-height: 1.3;
}

.lh-0 {
  line-height: 0;
}

.text-ellipsis {
  overflow: hidden;
  display: -webkit-box;
  text-overflow: ellipsis;

  /* autoprefixer: off */
  -webkit-box-orient: vertical;
}

.text-ellipsis-1l:extend(.text-ellipsis) {
  -webkit-line-clamp: 1;
}

.text-ellipsis-2l:extend(.text-ellipsis) {
  -webkit-line-clamp: 2;
}

.text-ellipsis-3l:extend(.text-ellipsis) {
  -webkit-line-clamp: 3;
}

.text-ellipsis-4l:extend(.text-ellipsis) {
  -webkit-line-clamp: 4;
}

.text-ellipsis-5l:extend(.text-ellipsis) {
  -webkit-line-clamp: 5;
}

